# nemo-qa-chatbot

./: .gitignore  README.md  pyproject.toml  requirements.txt
nemo_qa/: __init__.py  pyvenv.cfg
nemo_qa/api/: __init__.py  app.py  routes.py
nemo_qa/config/: __init__.py  lora_config.py  model_config.py  nim_config.py  training_config.py
nemo_qa/curator/: __init__.py  document_processor.py  qa_generator.py  quality_filters.py
nemo_qa/modeling/: __init__.py  evaluation.py  lora.py  model.py
nemo_qa/recipes/: __init__.py  curator_recipe.py  inference_recipe.py  lora_recipe.py
nemo_qa/ui/: __init__.py  app.py
nemo_qa/ui/components/: __init__.py  chat.py  explainability.py  visualization.py
nim/: Dockerfile  __init__.py  app.py  config.py  manifest.yaml  model_handler.py
notebooks/: 01_data_exploration.ipynb  02_model_analysis.ipynb  03_demo.ipynb
scripts/: curate_data.py  deploy.py  download_model.py  evaluate.py  export_nim.py  train.py
tests/: test_api.py  test_curator.py  test_model.py  test_nim.py  test_ui.py
