[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nemo_qa"
version = "0.1.0"
description = "Q&A chatbot built with NVIDIA NeMo 2.0 and LLAMA3"
readme = "README.md"
authors = [{name = "T-DevH", email = "thammadou@gmail.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "nvidia-nemo>=2.0.0",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "transformers>=4.30.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "gradio>=3.32.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/T-DevH/nemo-qa-chatbot"
"Bug Tracker" = "https://github.com/T-DevH/nemo-qa-chatbot/issues"

[project.scripts]
nemo-qa-download-model = "nemo_qa.scripts.download_model:main"
nemo-qa-curate-data = "nemo_qa.scripts.curate_data:main"
nemo-qa-train = "nemo_qa.scripts.train:main"
nemo-qa-evaluate = "nemo_qa.scripts.evaluate:main"
nemo-qa-export-nim = "nemo_qa.scripts.export_nim:main"
nemo-qa-deploy = "nemo_qa.scripts.deploy:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"